# accelerators

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  check.h  device_print.h  main.cpp  main_cuda.cpp  main_hip.cpp  print_test.cpp
