CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
PROJECT(accelerators LANGUAGES CXX C)

#SET(CMAKE_RELEASE_POSTFIX "")                  # Release is the default
#SET(CMAKE_DEBUG_POSTFIX "-debug")

# specify where compiled files must go
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)

LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
LIST(APPEND CMAKE_PREFIX_PATH "/opt/rocm/lib/cmake/")

SET(${CXX_STANDARD_REQUIRED} ON)

ADD_SUBDIRECTORY(src)

OPTION(BUILD_HIP  "Enable HIP build"  OFF)
OPTION(BUILD_CUDA "Enable CUDA build" OFF)


