INCLUDE_DIRECTORIES(.)


SET(ACC_HDS
    check.h
    device_print.h
)

SET(ACC_SRC
    main.cpp
)

FIND_PACKAGE(Hip)
FIND_PACKAGE(MIOpen)

MESSAGE(STATUS "Found MIOpen: v${MIOPEN_VERSION}  (include: ${MIOPEN_INCLUDE_DIR}, library: ${MIOPEN_LIBRARY})")
MESSAGE(STATUS "Found    Hip: v${HIP_VERSION}  (include: ${HIP_INCLUDE_DIR}, library: ${HIP_LIBRARY})")

INCLUDE_DIRECTORIES(${HIP_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${MIOPEN_INCLUDE_DIR})

ADD_EXECUTABLE(main ${ACC_HDS} ${ACC_SRC})
TARGET_LINK_LIBRARIES(main ${HIP_LIBRARY} ${MIOPEN_LIBRARY})
SET_PROPERTY(TARGET main PROPERTY CXX_STANDARD 17)


