INCLUDE_DIRECTORIES(.)


SET(ACC_HDS
    check.h
    device_print.h
)


SET(ACC_COMMON_SRC

)

IF(BUILD_HIP)
    SET(ACC_HIP_SRC
        main_hip.cpp
    )

    FIND_PACKAGE(Hip)
    FIND_PACKAGE(MIOpen)

    MESSAGE(STATUS "Found MIOpen: v${MIOPEN_VERSION}  (include: ${MIOPEN_INCLUDE_DIR}, library: ${MIOPEN_LIBRARY})")
    MESSAGE(STATUS "Found    Hip: v${HIP_VERSION}  (include: ${HIP_INCLUDE_DIR}, library: ${HIP_LIBRARY})")

    INCLUDE_DIRECTORIES(${HIP_INCLUDE_DIR})
    INCLUDE_DIRECTORIES(${MIOPEN_INCLUDE_DIR})

    ADD_EXECUTABLE(main ${ACC_HDS} ${ACC_COMMON_SRC} ${ACC_HIP_SRC})
    TARGET_LINK_LIBRARIES(main ${HIP_LIBRARY} ${MIOPEN_LIBRARY})
    SET_PROPERTY(TARGET main PROPERTY CXX_STANDARD 17)
ENDIF(BUILD_HIP)

IF(BUILD_CUDA)
    SET(ACC_CUDA_SRC
        main_cuda.cpp
    )

    # FIND_PACKAGE(cuda)
    FIND_PACKAGE(CUDNN)
    FIND_PACKAGE(CUDA)

    MESSAGE(STATUS "Found Cudnn: v${CUDNN_VERSION}  (include: ${CUDNN_INCLUDE_DIR}, library: ${CUDNN_LIBRARY})")
    MESSAGE(STATUS "Found  cuda: v${CUDA_VERSION}  (include: ${CUDA_INCLUDE_DIR}, library: ${CUDA_LIBRARY})")

    INCLUDE_DIRECTORIES(${HIP_INCLUDE_DIR})
    INCLUDE_DIRECTORIES(${CUDNN_INCLUDE_DIR})

    cuda_add_executable(main ${ACC_HDS} ${ACC_COMMON_SRC} ${ACC_CUDA_SRC})
    TARGET_LINK_LIBRARIES(main ${CUDA_LIBRARY} ${CUDNN_LIBRARY})
    SET_PROPERTY(TARGET main PROPERTY CXX_STANDARD 17)
ENDIF(BUILD_CUDA)

